Puts logos in their own justified wrapper alongside the version info, makes everything wrap relatively correctly when the viewport is narrow. Other minor cosmetic tweaks.

--- a/svip-o-vue/src/css/main.css
+++ b/svip-o-vue/src/css/main.css
@@ -3,26 +3,54 @@ html {
 	min-height: 100%;
 }
 
+/* navbar tweaking to reduce dead space */
+.svip-navbar { padding: 8px 20px; }
+
 body {
 	margin-bottom: 60px; /* Margin bottom by footer height */
 }
 
+/* styles for the footer, including version info and attribution logos */
 footer {
 	padding: 20px;
 }
 
 footer .version-info {
-	color: #aaa; font-style: italic;
+	font-size: smaller;
+	color: #aaa;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+
+	border-right: solid 1px #ccc;
 }
 footer .version-info a {
-	color: #66d697; font-weight: bolder;
+	color: #66d697;
+}
+footer .version-info .feedback {
+	margin-top: 0.5em;
 }
 
-	/* navbar tweaking to reduce dead space */
-.svip-navbar { padding: 8px 20px; }
+/* activates when the footer wraps */
+@media (max-width: 960px) {
+	/* adds extra padding to body so its content is not obscured by the footer in narrow mode,
+	 since the footer gets taller as a result of its contents wrapping */
+	body {
+		margin-bottom: 440px;
+	}
+
+	footer .attributions img {
+		/* adds a little vertical space between the logos when they wrap */
+		margin-bottom: 10px;
+	}
+
+	footer .version-info {
+		/* swaps version-info right border for bottom border when the row wraps */
+		border-right: none;
+		border-bottom: solid 1px #ccc;
+		padding-bottom: 15px;
+	}
+}
 
 /* some tweaks to boostrap-vue's inexplicable whitespace choices */
 .card-title {
